some css changes for title

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -36,8 +36,8 @@
 	<body>
 		<a href="#skip" class="visually-hidden">Skip to main content</a>
 
-		<header class="force-rtl">
-			<a href="/" class="home-link">{{ metadata.title }}<br></a>
+		<header class="rtl">
+			<a href="/" class="home-link">{{ metadata.title }}<p class="slug">{{ metadata.description }}</p></a>
 
 			{#- Read more about `eleventy-navigation` at https://www.11ty.dev/docs/plugins/navigation/ #}
 			<nav>
