move all sample posts to draft and finshup aboutus

--- a/content/blog.njk
+++ b/content/blog.njk
@@ -4,7 +4,7 @@ eleventyNavigation:
   key: آرشیو
   order: 2
 ---
-<h1>Archive</h1>
+<h1 class="rtl">آرشیو</h1>
 
 {% set postslist = collections.posts %}
 {% include "postslist.njk" %}
