--- a/content/index.njk
+++ b/content/index.njk
@@ -7,7 +7,7 @@ numberOfLatestPostsToShow: 3
 ---
 {% set postsCount = collections.posts | length %}
 {% set latestPostsCount = postsCount | min(numberOfLatestPostsToShow) %}
-<h1>Latest {{ latestPostsCount }} Post{% if latestPostsCount != 1 %}s{% endif %}</h1>
+<h1 class="rtl">آخرین نوشته‌ها</h1>
 
 {% set postslist = collections.posts | head(-1 * numberOfLatestPostsToShow) %}
 {% set postslistCounter = postsCount %}
@@ -15,7 +15,8 @@ numberOfLatestPostsToShow: 3
 
 {% set morePosts = postsCount - numberOfLatestPostsToShow %}
 {% if morePosts > 0 %}
-<p>{{ morePosts }} more post{% if morePosts != 1 %}s{% endif %} can be found in <a href="/blog/">the archive</a>.</p>
+<p class="rtl">{{ morePosts }} تا دیگه نوشته هست ◝(ᵔᵕᵔ)◜</p>
+<p class="rtl"> سایر نوشته‌ها را در <a href="/blog/">آرشیو</a> ببین.</p>
 {% endif %}
 
 {# List every content page in the project #}
