--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -1,4 +1,7 @@
 {%- css %}.postlist { counter-reset: start-from {{ (postslistCounter or postslist.length) + 1 }} }{% endcss %}
+{% if postslist.length == 0 %}
+	<p class="rtl">فعلا هیچ عرضی نیست ￣\_(ツ)_/￣</p>
+{% endif %}
 <ol reversed class="postlist">
 {% for post in postslist | reverse %}
 	<li class="postlist-item{% if post.url == url %} postlist-item-active{% endif %}">
