--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -6,6 +6,7 @@
 {% for post in postslist | reverse %}
 	<li class="postlist-item{% if post.url == url %} postlist-item-active{% endif %}">
 		<a href="{{ post.url }}" class="postlist-link rtl">{% if post.data.title %}{{ post.data.title }}{% else %}<code>{{ post.url }}</code>{% endif %}</a>
+		{% if post.data.description %}<p class="postlist-desc rtl">{{ post.data.description }}</p>{% endif %}
 		<time class="postlist-date" datetime="{{ post.date | htmlDateString }}">{{ post.date | readableDate("LLLL yyyy") }}</time>
 	</li>
 {% endfor %}
