update post , add buymeacoffee link

--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -27,3 +27,5 @@ layout: layouts/base.njk
 </ul>
 {%- endif %}
 {%- endif %}
+
+<p class="rtl">حالا که تا اینجا اومدی یه فنجون قهوه مهمون مون کن ☕ <a target="_blank" href="https://zarinp.al/622738">پرداخت آنلاین</a></p>
