remove buy me a coffee

--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -28,4 +28,4 @@ layout: layouts/base.njk
 {%- endif %}
 {%- endif %}
 
-<p class="rtl">حالا که تا اینجا اومدی یه فنجون قهوه مهمون مون کن ☕ <a target="_blank" href="https://zarinp.al/622738">پرداخت آنلاین</a></p>
+{# <p class="rtl">حالا که تا اینجا اومدی یه فنجون قهوه مهمون مون کن ☕ <a target="_blank" href="https://zarinp.al/622738">پرداخت آنلاین</a></p> #}
