--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -56,6 +56,7 @@
 				{%- for entry in collections.all | eleventyNavigation %}
 					<li class="nav-item"><a href="{{ entry.url }}"{% if entry.url == page.url %} aria-current="page"{% endif %}>{{ entry.title }}</a></li>
 				{%- endfor %}
+					<li class="nav-item"><a href="https://castbox.fm/channel/id6292614" target="_blank" rel="noopener noreferrer">پادکست🎙</a></li>
 				</ul>
 			</nav>
 		</header>
