--- a/content/podcast.njk
+++ b/content/podcast.njk
@@ -5,6 +5,15 @@ eleventyNavigation:
   order: 4
 ---
 <h1 class="rtl">پادکست نیمچه برنامه نویس</h1>
+<p class="rtl">این پادکست را می‌توانید از پادکچر های زیر دنبال کنید:</p>
+
+<p><a href="https://sadeghmohebbi.podbean.com/" target="_blank" rel="noopener noreferrer">Listen on Podbean</a></p>
+
+<iframe title="نیمچه برنامه نویس" allowtransparency="true" height="315" width="100%" style="border: none; min-width: min(100%, 430px);height:315px;" scrolling="no" data-name="pb-iframe-player" src="https://www.podbean.com/player-v2/?i=6dbv8-11ada07-pbblog-playlist&share=1&download=1&fonts=Arial&skin=1b1b1b&font-color=auto&rtl=0&logo_link=episode_page&btn-skin=3267a3&size=315" loading="lazy" allowfullscreen=""></iframe>
+
+<p><a href="https://castbox.fm/vh/6292614" target="_blank" rel="noopener noreferrer">Listen on Castbox</a></p>
+
+<p class="rtl">یا از طریق لینک های مستقیم زیر به اپیزود های پادکست گوش کنید: </p>
 
 {% set postslist = collections.episods %}
 {% include "postslist.njk" %}
