--- a/content/podcast.njk
+++ b/content/podcast.njk
@@ -7,7 +7,8 @@ eleventyNavigation:
 <h1 class="rtl">پادکست نیمچه برنامه نویس</h1>
 <p class="rtl">این پادکست را می‌توانید از پادکچر های زیر دنبال کنید:</p>
 
-<p><a href="https://castbox.fm/ch/6294201" target="_blank" rel="noopener noreferrer">Listen on Castbox</a></p>
+<p><a href="https://castbox.fm/ch/6294201" target="_blank" rel="noopener noreferrer">Listen on Castbox کست باکس</a></p>
+<p><a href="https://shenoto.com/channel/podcast/%D9%86%DB%8C%D9%85%DA%86%D9%87-%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87-%D9%86%D9%88%DB%8C%D8%B3-feed" target="_blank" rel="noopener noreferrer">Listen on Shenoto شنوتو</a></p>
 
 <p class="rtl">یا از طریق لینک های مستقیم زیر به اپیزود های پادکست گوش کنید: </p>
 
