add podbean public link

--- a/content/podcast.njk
+++ b/content/podcast.njk
@@ -4,11 +4,21 @@ eleventyNavigation:
   key: پادکست🎙
   order: 4
 ---
+<div class="rtl">
+  <img src="{{ metadata.podcast.artwork }}" alt="لوگو پادکست نیمچه برنامه نویس" class="mini-image">
+</div>
 <h1 class="rtl">پادکست نیمچه برنامه نویس</h1>
+<p class="rtl">
+  در این پادکست دوست دارم به شکل روان و تا جای ممکن داستانی درباره‌ ی مفاهیم و تکنولوژی های جدید در دواپس و برنامه نویسی صحبت کنم. هدفم در نهایت علاوه بر شبکه سازی با افراد هم فکر ، گسترش دانش خودم و شنوندگان پادکست است. گسترش دایره ای از دانش که ، می دانیم که نمی دانیم.
+<br>
+فلسفه اسم «نیمچه برنامه نویس» هم اینست که همیشه با ذوق در حال یادگیری است و خودش را دانای کل نمی‌ داند... (موضوع <a href="/podcast/ep0-why-and-what/">اپیزود صفر</a>)
+</p>
+<hr>
 <p class="rtl">این پادکست را می‌توانید از پادکچر های زیر دنبال کنید:</p>
 
 <p><a href="https://castbox.fm/ch/6294201" target="_blank" rel="noopener noreferrer">Listen on Castbox کست باکس</a></p>
 <p><a href="https://shenoto.com/channel/podcast/%D9%86%DB%8C%D9%85%DA%86%D9%87-%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87-%D9%86%D9%88%DB%8C%D8%B3-feed" target="_blank" rel="noopener noreferrer">Listen on Shenoto شنوتو</a></p>
+<p><a href="https://www.podbean.com/podcast-detail/fvjjx-3205f3/%D9%86%DB%8C%D9%85%DA%86%D9%87-%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87-%D9%86%D9%88%DB%8C%D8%B3-Podcast" target="_blank" rel="noopener noreferrer">Listen on Podbean پادبین</a></p>
 
 <p class="rtl">یا از طریق لینک های مستقیم زیر به اپیزود های پادکست گوش کنید: </p>
 
