Update podcast.njk to add spotify show link

--- a/content/podcast.njk
+++ b/content/podcast.njk
@@ -17,6 +17,7 @@ eleventyNavigation:
 <p class="rtl">این پادکست را می‌توانید از پادکچر های زیر دنبال کنید:</p>
 
 <p><a href="https://castbox.fm/ch/6294201" target="_blank" rel="noopener noreferrer">Listen on Castbox کست باکس</a></p>
+<p><a href="https://open.spotify.com/show/6quS3ENsYgUcHhM7jv0bzh?si=npHqN0u0Qf2C8ZhftKh-2A" target="_blank" rel="noopener noreferrer">Listen on Spotify اسپاتیفای</a></p>
 <p><a href="https://shenoto.com/channel/podcast/%D9%86%DB%8C%D9%85%DA%86%D9%87-%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87-%D9%86%D9%88%DB%8C%D8%B3-feed" target="_blank" rel="noopener noreferrer">Listen on Shenoto شنوتو</a></p>
 <p><a href="https://www.podbean.com/podcast-detail/fvjjx-3205f3/%D9%86%DB%8C%D9%85%DA%86%D9%87-%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87-%D9%86%D9%88%DB%8C%D8%B3-Podcast" target="_blank" rel="noopener noreferrer">Listen on Podbean پادبین</a></p>
 
